--- a/assets/css/style-start.css
+++ b/assets/css/style-start.css
@@ -32,7 +32,7 @@ h3{
 }
 
 picture{
-    margin-left: -4em;
+    margin: -0.6em 0 0 -4em;
     width: 8em;
     height: 8em;
     position: static;
@@ -123,10 +123,10 @@ body{
 main{
     display: flex;
     position: relative;
-    height: 70em;
+    height: 60em;
 }
 
-/*Section GAUCHE*/
+/*-----Section GAUCHE-----*/
 .blocleft{
     position: relative;
     width: 23em;
@@ -140,7 +140,7 @@ main{
     margin: 1.5em 2em 1em 2em;
 }
 
-/*Système de notation par étoiles*/
+/*Compétences & Langues*/
 .skills{
     display: flex;
     justify-content: space-between;
@@ -148,18 +148,45 @@ main{
     margin: 0.5em 3em;
 }
 
-/*Texte Compétences*/
+/*Texte Compétences & Langues*/
 .RateTxt{
     font-family: 'Raleway', sans-serif;
     font-weight: bold;
 }
 
+/*Système de notation par étoiles*/
 .star{
-    font-size: 1em;
+    font-size: 1.2em;
     color: #17abb3;
 }
 
-/*Section DROITE*/
+/*Texte niveau des langues*/
+.LangLevel{
+    font-family: 'Raleway', sans-serif;
+    color: #333333;
+}
+
+/*Styles de listes qualités & centres d'intérêt*/
+.ListStyle{
+    display: flex;
+    flex-direction: column;
+    font-family: 'Raleway', sans-serif;
+    margin: 0.5em 3em;
+    padding-left: 0;
+    line-height: 1.4em;
+    color: #333333;
+    list-style-type: none;
+}
+
+/*Puces & couleur - Qualités & centres d'intérêt*/
+.ListPos::before{
+    content: "\0025A0";
+    padding-right: 0.8em;
+    color: #17abb3;
+    vertical-align: text-bottom;
+ }
+
+/*-----Section DROITE-----*/
 .blocright{
     position: relative;
     width: 49.5em;
@@ -173,20 +200,9 @@ main{
     margin: 1.5em 2em 1em 2em;
 }
 
-/*A revoir?*/
-.h3left{
+.h3right{
     color: #333333;
     margin-top: 0.5em;
-    margin-right: 20em;
-}
-
-/*A revoir?*/
-.h3right{
-    float: right;
-    color: #17abb3;
-    font-size: medium;
-    padding-top: 0.2em;
-    margin-top: -2.6em;
 }
 
 /*Profil*/
@@ -198,28 +214,38 @@ main{
     margin: 0 3em;
 }
 
-/*Formations & Diplomes*/
+/*Formations, Diplomes et Experience PRO*/
 .FormBox{
     display: flex;
     flex-direction: column;
     margin: 0 3em;
 }
 
-/*Sous Texte Formations*/
+/*Périodes Formations, Diplomes et Expérience PRO*/
+.period{
+    float: right;
+    font-family: 'Raleway', sans-serif;
+    color: #17abb3;
+    font-size: medium;
+    margin-top: -2.4em;
+    padding-bottom: 0.1em;
+}
+
+/*Sous Texte Formations, Diplomes et Expérience PRO*/
 .FormTxt{
     font-family: 'Raleway', sans-serif;
     font-style: italic;
     font-size: small;
     color: #333333;
-    line-height: 0em;
-    margin-top: -1em;
+    margin-top: -1.5em;
+    padding-bottom: 0.5em;
 }
 
-.Diplomes{
-    margin-top: 0.2em;
+.Experience{
+    margin-top: 0.3em;
 }
 
-.Diplomes:hover{
+.Experience:hover{
     background-color: #e3e3e3;
     border-left: 0.4em solid #17abb3;
 }
@@ -227,10 +253,12 @@ main{
 .foot{
     display: flex;
     font-family: 'Raleway', sans-serif;
+    font-style: italic;
+    font-size: small;
     background-color: #17abb3;
     color: #ffffff;
     justify-content: center;
-    align-items: center;
-    height: 5em;
+    align-items: end;
+    height: 7em;
 }
 
