--- a/assets/css/style-start.css
+++ b/assets/css/style-start.css
@@ -35,10 +35,9 @@ picture{
     margin: -0.6em 0 0 -4em;
     width: 8em;
     height: 8em;
-    position: static;
 }
 
-img{
+.ImgProfil{
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -99,7 +98,6 @@ picture:active img{
 
 .contact__item3{
     list-style-image:  url('../img/Adresse.png');
-    list-style-type: none;
 }
 
 .contact__item4{
@@ -123,7 +121,7 @@ body{
 main{
     display: flex;
     position: relative;
-    height: 60em;
+    height: 70em;
 }
 
 /*-----Section GAUCHE-----*/
@@ -138,6 +136,7 @@ main{
     color: #17abb3;
     border-bottom: 0.1em solid #f5f5f5;
     margin: 1.5em 2em 1em 2em;
+    padding-bottom: 0.5em;
 }
 
 /*Compétences & Langues*/
@@ -198,6 +197,7 @@ main{
     color: #17abb3;
     border-bottom: 0.1em solid rgba(227, 227, 227, 1);
     margin: 1.5em 2em 1em 2em;
+    padding-bottom: 0.5em;
 }
 
 .h3right{
@@ -262,3 +262,23 @@ main{
     height: 7em;
 }
 
+/*Liens vers les réseaux sociaux*/
+.social_icons{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.social_item{
+    width: 2.4em;
+    height: 2.4em;
+}
+
+.social_item:hover{
+    opacity: 0.8;
+}
+
+img{
+    border-radius: 0%;
+    border-style: none;
+}
